--- a/src/index.css
+++ b/src/index.css
@@ -164,3 +164,31 @@ input:-webkit-autofill {
   -webkit-text-fill-color: var(--dark-muted-bg) !important;
   transition: background-color 5000s ease-in-out 0s;
 }
+
+@keyframes driftRight {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 0.8;
+  }
+}
+
+@keyframes driftLeft {
+  0% {
+    transform: translateX(200%);
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0.8;
+  }
+}
