--- a/src/index.css
+++ b/src/index.css
@@ -175,8 +175,9 @@ body {
 
 .-rotate-45 {
   transform: rotate(-45deg);
-input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0px 1000px var(--primary) inset !important;
-  -webkit-text-fill-color: var(--dark-muted-bg) !important;
-  transition: background-color 5000s ease-in-out 0s;
+  input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px var(--primary) inset !important;
+    -webkit-text-fill-color: var(--dark-muted-bg) !important;
+    transition: background-color 5000s ease-in-out 0s;
+  }
 }
