--- a/src/index.css
+++ b/src/index.css
@@ -209,3 +209,12 @@ body {
     opacity: 0.8;
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px var(--primary) inset !important;
+  -webkit-text-fill-color: var(--dark-muted-bg) !important;
+  transition: background-color 5000s ease-in-out 0s; /* Chrome hack */
+}
