--- a/src/index.css
+++ b/src/index.css
@@ -327,3 +327,15 @@ body,
 .animate-glow {
   animation: glow 1.5s infinite ease-in-out;
 }
+
+/* For Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
